# melody-mind-nuxt

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  Helptexte für AI.md  README.md  VSCODE-EXTENSIONS.md  check_section_length.py  check_sections.py  eslint.config.mjs  fix_all_json.js  fix_json.js  help-text-content.md  i18n.config.ts  missing categories.md  nuxt.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: nuxthub.yml
app/: app.vue  sitemap-urls.js
app/components/: CategoryCard.vue  DifficultyLevels.vue  Footer.vue  GoldenRecords.vue  LanguagePicker.vue  MainNavigation.vue  RulesList.vue  RulesSection.vue  SearchBar.vue  ShowCoins.vue  ShowPoints.vue  SkipLink.vue  UsernameInput.vue
app/composables/: useApiClient.ts  useArtist.ts  useAudioPlayer.ts  useCategories.ts  useGame.ts  useGameAudio.ts  useGameNavigation.ts  useGameResults.ts  useGameRewards.ts  useGameScore.ts  useGameState.ts  useHighscores.ts  useJokers.ts  useJsonld.ts  useQuestions.ts  useSeo.ts  useShare.ts  useThumbHash.ts  (+1 more)
components/: AuthForgotPasswordForm.vue  AuthLoginForm.vue  AuthRegisterForm.vue  AuthWelcomeSection.vue  CategoryCard.vue  DifficultyLevels.vue  GameOverScreen.vue  GoldenRecords.vue  HighscoreTable.vue  LanguagePicker.vue  RulesList.vue  ShowPoints.vue  UsernameInput.vue
composables/: useArtist.ts  useAuth.ts  useAuthForm.ts  useCategories.ts  useGameResults.ts  useGameRewards.ts  useGameScore.ts  useGameState.ts  useJokers.ts  useQuestions.ts  useSeo.ts
constants/: expertResponses.ts
json/: de_categories.json
layouts/: default.vue
lib/: auth-client.ts  auth.ts  email.ts  turso.ts
locales/: de.json
middleware/: auth.global.ts
pages/: [category].vue  gamehome.vue  gamerules.vue  highscore.vue  highscores.vue  imprint.vue  index.vue  privacy.vue  profile.vue  reset-password.vue  restricted.vue
public/: _robots.txt
scripts/: category_headlines.txt  category_headlines_sorted.txt  check_covers.sh  check_preview_links.py  existing_categories.txt  existing_categories_clean.txt  generate-sitemap-urls.js  generate-thumbhash.ts  generate_content.py  grammar_check.py  grammar_rules.py  sync_music_links.py  test_content_generation.py  translate_categories.py  translate_correct_readability.py
types/: content.d.ts
workers/: search.worker.js
(+2366 files in other folders)
